docs: [NFD] Fix javadoc; update documentation